Refactor HTML structure and style updates

--- a/index.html
+++ b/index.html
@@ -1,309 +1,234 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Grill&Chill | Premium BBQ Package</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Grill&Chill | Premium BBQ Package</title>
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <style>
-    :root{
-      --primary:#e63946;
-      --dark:#0f0f0f;
-      --card:#161616;
-      --text:#eeeeee;
-      --accent:#ffcc70;
-    }
-
-    *{box-sizing:border-box}
-
-    body{
-      margin:0;
-      font-family:'Poppins',sans-serif;
-      background:var(--dark);
-      color:var(--text);
-      line-height:1.6;
-    }
-
-    header{
-      min-height:100vh;
-      display:flex;
-      flex-direction:column;
-      justify-content:center;
-      align-items:center;
-      text-align:center;
-      padding:20px;
-      background:
-        linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),
-        url('https://images.unsplash.com/photo-1558030006-450675393462');
-      background-size:cover;
-      background-position:center;
-    }
-
-    header h1{font-size:52px;margin:0;font-weight:700}
-    header p{font-size:20px;max-width:600px;margin:20px auto}
-
-    section{
-      padding:80px 20px;
-      max-width:1200px;
-      margin:auto;
-    }
-
-    h2{
-      text-align:center;
-      font-size:34px;
-      margin-bottom:50px;
-      position:relative;
-    }
-
-    h2::after{
-      content:'';
-      width:80px;
-      height:4px;
-      background:var(--primary);
-      display:block;
-      margin:15px auto 0;
-      border-radius:5px;
-    }
-
-    .btn{
-      display:inline-block;
-      background:var(--primary);
-      color:#fff;
-      padding:14px 32px;
-      border-radius:12px;
-      text-decoration:none;
-      font-weight:600;
-      transition:.2s
-    }
-
-    .btn:hover{background:#ff4d5a}
-
-    .grid{
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(270px,1fr));
-      gap:30px;
-    }
-
-    .card{
-      background:var(--card);
-      padding:30px;
-      border-radius:22px;
-      box-shadow:0 12px 30px rgba(0,0,0,.5);
-      transition:.3s
-    }
-
-    .card:hover{transform:translateY(-6px)}
-
-    .card h3{margin-top:0;color:var(--accent)}
-
-    .badge{
-      display:inline-block;
-      background:var(--accent);
-      color:#000;
-      padding:6px 14px;
-      border-radius:20px;
-      font-size:12px;
-      font-weight:600;
-      margin-bottom:10px
-    }
-
-    ul{padding-left:20px}
-
-    /* Gallery */
-    .gallery{
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-      gap:20px;
-    }
-
-    .gallery img{
-      width:100%;
-      height:220px;
-      object-fit:cover;
-      border-radius:18px;
-      transition:.3s
-    }
-
-    .gallery img:hover{transform:scale(1.05)}
-
-    /* Form */
-    form{
-      max-width:650px;
-      background:var(--card);
-      margin:40px auto 0;
-      padding:40px;
-      border-radius:22px;
-      box-shadow:0 12px 30px rgba(0,0,0,.6)
-    }
-
-    label{display:block;margin-bottom:6px;font-weight:500}
-
-    input,select,textarea{
-      width:100%;
-      padding:14px;
-      border-radius:12px;
-      border:none;
-      margin-bottom:20px;
-      font-family:'Poppins',sans-serif
-    }
-
-    textarea{resize:none}
-
-    footer{
-      background:#000;
-      color:#aaa;
-      text-align:center;
-      padding:30px 20px
-    }
-
-    @media(max-width:600px){
-      header h1{font-size:40px}
-      section{padding:60px 20px}
-    }
-  </style>
+<style>
+:root{
+  --primary:#e63946;
+  --dark:#0f0f0f;
+  --card:#161616;
+  --text:#eee;
+  --accent:#ffcc70;
+}
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  background:var(--dark);
+  color:var(--text);
+}
+header{
+  min-height:100vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  padding:20px;
+  background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),
+  url('https://images.unsplash.com/photo-1558030006-450675393462');
+  background-size:cover;
+}
+header h1{font-size:52px;margin:0}
+section{
+  padding:80px 20px;
+  max-width:1200px;
+  margin:auto;
+}
+h2{
+  text-align:center;
+  font-size:34px;
+  margin-bottom:50px;
+}
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(270px,1fr));
+  gap:30px;
+}
+.card{
+  background:var(--card);
+  padding:30px;
+  border-radius:22px;
+}
+.badge{
+  background:var(--accent);
+  color:#000;
+  padding:6px 14px;
+  border-radius:20px;
+  font-size:12px;
+  font-weight:600;
+}
+.btn{
+  background:var(--primary);
+  color:#fff;
+  padding:14px;
+  border-radius:12px;
+  border:none;
+  width:100%;
+  font-weight:600;
+  cursor:pointer;
+}
+form{
+  max-width:650px;
+  background:var(--card);
+  padding:40px;
+  border-radius:22px;
+  margin:auto;
+}
+label{display:block;margin-bottom:6px}
+input,select,textarea{
+  width:100%;
+  padding:14px;
+  border-radius:12px;
+  border:none;
+  margin-bottom:20px;
+}
+footer{
+  text-align:center;
+  padding:30px;
+  color:#aaa;
+}
+</style>
 </head>
+
 <body>
 
 <header>
   <h1>Grill&Chill</h1>
-  <p>Premium BBQ Package • Lengkap • Praktis • Siap Untuk Momen Spesial</p>
-  <a href="#booking" class="btn">Booking Sekarang</a>
+  <p>Premium BBQ Package • Lengkap • Praktis</p>
+  <a href="#booking" class="btn" style="width:auto">Booking Sekarang</a>
 </header>
 
 <section>
-  <h2>Kenapa Grill&Chill?</h2>
-  <div class="grid">
-    <div class="card">🔥 Paket BBQ lengkap & siap pakai</div>
-    <div class="card">🥩 Daging fresh & kualitas premium</div>
-    <div class="card">🚚 Antar – jemput area Depok</div>
-    <div class="card">🎉 Cocok untuk keluarga & acara spesial</div>
-  </div>
-</section>
+<h2>Paket Grill</h2>
 
-<section>
-  <h2>Paket Grill</h2>
-  <div class="grid">
+<div class="grid">
 
-    <div class="card">
-      <span class="badge">Best Seller</span>
-      <h3>Paket Romantic</h3>
-      <ul>
-        <li>Grill Pan + Kompor + Gas</li>
-        <li>Beef 250gr & Chicken 250gr</li>
-        <li>Saus lengkap & sayuran</li>
-        <li>Porsi 1–2 orang</li>
-      </ul>
-      <p><strong>Rp 119.000</strong></p>
-    </div>
+<div class="card">
+<span class="badge">Best Seller</span>
+<h3>Paket Romantic</h3>
+<ul>
+  <li>Grill Pan + Kompor + Gas</li>
+  <li>Beef 250gr</li>
+  <li>Chicken 250gr</li>
+  <li>Saus BBQ & Sayuran</li>
+  <li>Porsi 1–2 Orang</li>
+</ul>
+<p><strong>Rp 119.000</strong></p>
+</div>
 
-    <div class="card">
-      <span class="badge">Favorit</span>
-      <h3>Paket Party</h3>
-      <ul>
-        <li>Grill Pan + Kompor + Gas</li>
-        <li>Beef 500gr & Chicken 500gr</li>
-        <li>Saus lengkap & sayuran</li>
-        <li>Porsi 4–5 orang</li>
-      </ul>
-      <p><strong>Rp 200.000</strong></p>
-    </div>
+<div class="card">
+<span class="badge">Favorit</span>
+<h3>Paket Party</h3>
+<ul>
+  <li>Grill Pan + Kompor + Gas</li>
+  <li>Beef 500gr</li>
+  <li>Chicken 500gr</li>
+  <li>Saus BBQ & Sayuran</li>
+  <li>Porsi 4–5 Orang</li>
+</ul>
+<p><strong>Rp 200.000</strong></p>
+</div>
 
-    <div class="card">
-      <h3>Paket Custom</h3>
-      <p>Menu & porsi fleksibel sesuai kebutuhan acara.</p>
-      <p><strong>Harga menyesuaikan</strong></p>
-    </div>
+<div class="card">
+<h3>Paket Custom</h3>
+<ul>
+  <li>Menu & porsi bebas</li>
+  <li>Cocok acara kantor / keluarga</li>
+  <li>Bisa request alat tambahan</li>
+</ul>
+<p><strong>Harga Menyesuaikan</strong></p>
+</div>
 
-  </div>
-</section>
-
-<section>
-  <h2>Galeri BBQ</h2>
-  <div class="gallery">
-    <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1">
-    <img src="https://images.unsplash.com/photo-1529193591184-b1d58069ecdd">
-    <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092">
-    <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe">
-  </div>
+</div>
 </section>
 
 <section id="booking">
-  <h2>Form Booking</h2>
-  <form onsubmit="kirimWA();return false;">
-    <label>Nama Lengkap</label>
-    <input type="text" id="nama" required>
+<h2>Form Booking</h2>
 
-    <label>No WhatsApp</label>
-    <input type="tel" id="wa" required>
+<form onsubmit="kirimWA();return false;">
+<label>Nama</label>
+<input id="nama" required>
 
-    <label>Pilih Paket</label>
-    <select id="paket">
-      <option>Paket Romantic</option>
-      <option>Paket Party</option>
-      <option>Paket Custom</option>
-    </select>
+<label>No WhatsApp</label>
+<input id="wa" required>
 
-    <label>Tanggal Sewa</label>
-    <input type="date" id="tanggal" required>
+<label>Pilih Paket</label>
+<select id="paket" onchange="hitungTotal()">
+<option>Paket Romantic</option>
+<option>Paket Party</option>
+<option>Paket Custom</option>
+</select>
 
-    <label>Catatan Tambahan</label>
-    <textarea rows="4" id="note"></textarea>
+<label>Metode Pengambilan</label>
+<select id="pickup" onchange="hitungTotal()">
+<option value="ambil">Ambil Sendiri (Gratis)</option>
+<option value="antar">Diantar</option>
+</select>
 
-    <button class="btn" type="submit">Kirim Booking via WhatsApp</button>
-  </form>
-</section>
+<label>Jarak (km)</label>
+<input type="number" id="jarak" disabled oninput="hitungTotal()">
 
-<section>
-  <h2>Kontak</h2>
-  <p style="text-align:center">📍 Cimpaeun – Tapos Depok</p>
-  <p style="text-align:center">📞 WhatsApp: 089601360782</p>
+<label>Tanggal Sewa</label>
+<input type="date" id="tanggal" required>
+
+<label>Total Harga</label>
+<input id="totalHarga" readonly value="Rp 0">
+
+<label>Catatan</label>
+<textarea id="note"></textarea>
+
+<button class="btn">Kirim Booking WhatsApp</button>
+</form>
 </section>
 
 <footer>
-  <p>© 2025 Grill&Chill • Premium BBQ Package</p>
+© 2025 Grill&Chill • Cimpaeun – Tapos Depok
 </footer>
 
 <script>
+const hargaPaket={
+"Paket Romantic":119000,
+"Paket Party":200000,
+"Paket Custom":0
+};
+
+function hitungTotal(){
+let total=hargaPaket[paket.value]||0;
+let ongkir=0;
+
+if(pickup.value==="antar"){
+  jarak.disabled=false;
+  let j=parseFloat(jarak.value)||0;
+  if(j>5) ongkir=(j-5)*2500;
+}else{
+  jarak.disabled=true;
+  jarak.value="";
+}
+
+total+=ongkir;
+totalHarga.value="Rp "+total.toLocaleString("id-ID");
+}
+
 function kirimWA(){
-  const nama = document.getElementById('nama').value;
-  const wa = document.getElementById('wa').value;
-  const paket = document.getElementById('paket').value;
-  const tanggal = document.getElementById('tanggal').value;
-  const note = document.getElementById('note').value;
+const pesan=`Halo Grill&Chill 👋
 
-  const pesan = `
-Halo Grill&Chill 👋
+Nama: ${nama.value}
+Paket: ${paket.value}
+Pengambilan: ${pickup.value}
+Jarak: ${jarak.value||'-'} km
+Tanggal: ${tanggal.value}
+Total: ${totalHarga.value}
+Catatan: ${note.value||'-'}`;
 
-Saya ingin melakukan *booking BBQ package* dengan detail berikut:
-
-━━━━━━━━━━━━━━
-👤 Nama: ${nama}
-📱 WhatsApp: ${wa}
-🔥 Paket: ${paket}
-📅 Tanggal Sewa: ${tanggal}
-📝 Catatan: ${note ? note : '-'}
-━━━━━━━━━━━━━━
-
-Mohon *konfirmasi ketersediaan tanggal* ya 🙏
-
-📌 *Catatan Penting:*
-Booking akan dianggap *RESMI* setelah:
-✅ Admin mengonfirmasi ketersediaan
-✅ Pembayaran DP dilakukan
-
-Terima kasih 🙏
-  `;
-
-  window.open(
-    "https://wa.me/6289601360782?text=" + encodeURIComponent(pesan),
-    "_blank"
-  );
+window.open("https://wa.me/6289601360782?text="+encodeURIComponent(pesan));
 }
 </script>
 
 </body>
 </html>
-
