--- a/index.html
+++ b/index.html
@@ -1,101 +1,116 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Grill&Chill | Premium BBQ Package</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 <style>
 :root{
---primary:#e63946;
---dark:#0f0f0f;
---card:#161616;
---text:#eee;
---accent:#ffcc70;
+  --primary:#e63946;
+  --dark:#0f0f0f;
+  --card:#161616;
+  --text:#eeeeee;
+  --accent:#ffcc70;
 }
 *{box-sizing:border-box}
 body{
-margin:0;
-font-family:'Poppins',sans-serif;
-background:var(--dark);
-color:var(--text);
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  background:var(--dark);
+  color:var(--text);
 }
 header{
-min-height:100vh;
-display:flex;
-justify-content:center;
-align-items:center;
-text-align:center;
-background:
-linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),
-url('https://images.unsplash.com/photo-1558030006-450675393462');
-background-size:cover;
+  min-height:70vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  padding:20px;
+  background:
+    linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)),
+    url('https://images.unsplash.com/photo-1558030006-450675393462');
+  background-size:cover;
+}
+header h1{font-size:52px;margin:0}
+header p{font-size:20px;max-width:600px}
+.btn{
+  background:var(--primary);
+  color:#fff;
+  padding:14px 30px;
+  border-radius:12px;
+  text-decoration:none;
+  font-weight:600;
 }
 section{
-padding:80px 20px;
-max-width:1200px;
-margin:auto;
+  padding:70px 20px;
+  max-width:1200px;
+  margin:auto;
+}
+h2{
+  text-align:center;
+  margin-bottom:40px;
 }
 .grid{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(270px,1fr));
-gap:30px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:30px;
 }
 .card{
-background:var(--card);
-padding:30px;
-border-radius:22px;
+  background:var(--card);
+  padding:30px;
+  border-radius:22px;
+  box-shadow:0 12px 30px rgba(0,0,0,.6);
 }
 .badge{
-background:var(--accent);
-color:#000;
-padding:6px 14px;
-border-radius:20px;
-font-size:12px;
-font-weight:600;
+  display:inline-block;
+  background:var(--accent);
+  color:#000;
+  padding:6px 16px;
+  border-radius:20px;
+  font-size:12px;
+  font-weight:600;
 }
 .gallery{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-gap:20px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:20px;
 }
 .gallery img{
-width:100%;
-height:220px;
-object-fit:cover;
-border-radius:18px;
+  width:100%;
+  height:220px;
+  object-fit:cover;
+  border-radius:18px;
 }
-.btn{
-background:var(--primary);
-color:#fff;
-padding:14px;
-border-radius:12px;
-border:none;
-width:100%;
-font-weight:600;
-cursor:pointer;
+label{display:block;margin-top:15px}
+select,input{
+  width:100%;
+  padding:14px;
+  border-radius:12px;
+  border:none;
+  margin-top:6px;
 }
-form{
-max-width:650px;
-background:var(--card);
-padding:40px;
-border-radius:22px;
-margin:auto;
+.breakdown{
+  background:#0b0b0b;
+  padding:16px;
+  border-radius:12px;
+  margin-top:15px;
 }
-label{display:block;margin-bottom:6px}
-input,select,textarea{
-width:100%;
-padding:14px;
-border-radius:12px;
-border:none;
-margin-bottom:20px;
+.row{display:flex;justify-content:space-between}
+.total{
+  font-size:22px;
+  font-weight:700;
+  color:#25d366;
 }
+iframe{border:none;border-radius:16px}
 footer{
-text-align:center;
-padding:30px;
-color:#aaa;
+  background:#000;
+  color:#aaa;
+  text-align:center;
+  padding:30px 20px;
 }
 </style>
 </head>
@@ -103,137 +118,133 @@ color:#aaa;
 <body>
 
 <header>
-<div>
-<h1>Grill&Chill</h1>
-<p>Premium BBQ Package • Lengkap • Praktis</p>
-<a href="#booking" class="btn" style="width:auto">Booking Sekarang</a>
-</div>
+  <h1>Grill&Chill</h1>
+  <p>Premium BBQ Package • Lengkap • Praktis • Siap Untuk Momen Spesial</p>
+  <a class="btn" href="#booking">Booking Sekarang</a>
 </header>
 
 <section>
-<h2 style="text-align:center">Paket Grill</h2>
+<h2>Kenapa Grill&Chill?</h2>
 <div class="grid">
-
-<div class="card">
-<span class="badge">Best Seller</span>
-<h3>Paket Romantic</h3>
-<ul>
-<li>Grill Pan + Kompor + Gas</li>
-<li>Beef 250gr</li>
-<li>Chicken 250gr</li>
-<li>Saus BBQ & Sayuran</li>
-<li>Porsi 1–2 Orang</li>
-</ul>
-<p><strong>Rp 119.000</strong></p>
-</div>
-
-<div class="card">
-<span class="badge">Favorit</span>
-<h3>Paket Party</h3>
-<ul>
-<li>Grill Pan + Kompor + Gas</li>
-<li>Beef 500gr</li>
-<li>Chicken 500gr</li>
-<li>Saus BBQ & Sayuran</li>
-<li>Porsi 4–5 Orang</li>
-</ul>
-<p><strong>Rp 200.000</strong></p>
-</div>
-
-<div class="card">
-<h3>Paket Custom</h3>
-<ul>
-<li>Menu & porsi fleksibel</li>
-<li>Cocok acara kantor & keluarga</li>
-<li>Alat bisa tambah</li>
-</ul>
-<p><strong>Harga Menyesuaikan</strong></p>
-</div>
-
+  <div class="card">🔥 Paket BBQ lengkap & siap pakai</div>
+  <div class="card">🥩 Daging fresh & kualitas premium</div>
+  <div class="card">🚚 Antar – jemput area Depok</div>
+  <div class="card">🎉 Cocok untuk keluarga & acara spesial</div>
 </div>
 </section>
 
 <section>
-<h2 style="text-align:center">Galeri BBQ</h2>
+<h2>Paket Grill</h2>
+<div class="grid">
+  <div class="card">
+    <span class="badge">Best Seller</span>
+    <h3>Paket Romantic</h3>
+    <ul>
+      <li>Grill Pan + Kompor + Gas</li>
+      <li>Beef 250gr & Chicken 250gr</li>
+      <li>Saus & sayuran</li>
+      <li>Porsi 1–2 orang</li>
+    </ul>
+    <strong>Rp 119.000</strong>
+  </div>
+
+  <div class="card">
+    <span class="badge">Favorit</span>
+    <h3>Paket Party</h3>
+    <ul>
+      <li>Grill Pan + Kompor + Gas</li>
+      <li>Beef 500gr & Chicken 500gr</li>
+      <li>Saus & sayuran</li>
+      <li>Porsi 4–5 orang</li>
+    </ul>
+    <strong>Rp 200.000</strong>
+  </div>
+
+  <div class="card">
+    <h3>Paket Custom</h3>
+    <p>Menu & porsi fleksibel sesuai kebutuhan acara.</p>
+    <strong>Harga menyesuaikan</strong>
+  </div>
+</div>
+</section>
+
+<section>
+<h2>Galeri BBQ</h2>
 <div class="gallery">
-<img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1">
-<img src="https://images.unsplash.com/photo-1529193591184-b1d58069ecdd">
-<img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092">
-<img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe">
+  <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1">
+  <img src="https://images.unsplash.com/photo-1529193591184-b1d58069ecdd">
+  <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092">
+  <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe">
 </div>
 </section>
 
 <section id="booking">
-<h2 style="text-align:center">Form Booking</h2>
+<h2>Hitung Booking</h2>
 
-<form onsubmit="kirimWA();return false;">
-<label>Nama</label>
-<input id="nama" required>
-
-<label>No WhatsApp</label>
-<input id="wa" required>
+<div class="card">
 
 <label>Pilih Paket</label>
-<select id="paket" onchange="hitungTotal()">
-<option>Paket Romantic</option>
-<option>Paket Party</option>
-<option>Paket Custom</option>
+<select id="paket" onchange="hitung()">
+  <option value="0">-- Pilih Paket --</option>
+  <option value="119000">Paket Romantic</option>
+  <option value="200000">Paket Party</option>
 </select>
 
 <label>Metode Pengambilan</label>
-<select id="pickup" onchange="hitungTotal()">
-<option value="ambil">Ambil Sendiri (Gratis)</option>
-<option value="antar">Diantar</option>
+<select id="pickup" onchange="hitung()">
+  <option value="ambil">Ambil Sendiri</option>
+  <option value="antar">Di Antar</option>
 </select>
 
 <label>Jarak (km)</label>
-<input type="number" id="jarak" min="1" disabled oninput="hitungTotal()">
+<input type="number" id="jarak" oninput="hitung()">
 
-<label>Total Harga</label>
-<input id="totalHarga" readonly value="Rp 0">
+<div class="breakdown">
+  <div class="row"><span>Harga Paket</span><span id="hargaPaket">Rp 0</span></div>
+  <div class="row"><span>Ongkir</span><span id="ongkir">Rp 0</span></div>
+  <div class="row total"><span>Total</span><span id="total">Rp 0</span></div>
+</div>
 
-<button class="btn">Kirim Booking WhatsApp</button>
-</form>
+<a href="#form" class="btn" style="margin-top:20px">Lanjut Form Resmi</a>
+<p style="font-size:12px;color:#bbb;margin-top:10px">
+Upload KTP / KK WAJIB • Gratis 1–5 km • >5 km Rp 2.500 / km
+</p>
+
+</div>
 </section>
 
-<footer>© 2025 Grill&Chill • Cimpaeun – Tapos Depok</footer>
+<section id="form">
+<h2>Form Booking Resmi</h2>
+
+<iframe
+  src="https://docs.google.com/forms/d/e/1FAIpQLSeCAOL8N1m9EBtw8q7mZ7Gii87DdAjbmoedlib88B1SGsssdg/viewform?usp=header"
+  width="100%"
+  height="900">
+</iframe>
+
+</section>
+
+<footer>
+<p>📍 Cimpaeun – Tapos Depok</p>
+<p>📞 WhatsApp 089601360782</p>
+<p>© 2025 Grill&Chill</p>
+</footer>
 
 <script>
-const hargaPaket={
-"Paket Romantic":119000,
-"Paket Party":200000,
-"Paket Custom":0
-};
-
-function hitungTotal(){
-let paketHarga=hargaPaket[paket.value]||0;
-let ongkir=0;
-
-if(pickup.value==="antar"){
-jarak.disabled=false;
-let j=parseFloat(jarak.value)||0;
-if(j>5){
-ongkir=j*2500;
+function rp(x){
+  return 'Rp ' + (x||0).toLocaleString('id-ID');
 }
-}else{
-jarak.disabled=true;
-jarak.value="";
-}
-
-let total=paketHarga+ongkir;
-totalHarga.value="Rp "+total.toLocaleString("id-ID");
-}
-
-function kirimWA(){
-const pesan=`Halo Grill&Chill 👋
-
-Nama: ${nama.value}
-Paket: ${paket.value}
-Pengiriman: ${pickup.value}
-Jarak: ${jarak.value||'-'} km
-Total Harga: ${totalHarga.value}`;
-
-window.open("https://wa.me/6289601360782?text="+encodeURIComponent(pesan));
+function hitung(){
+  const paket = parseInt(document.getElementById('paket').value)||0;
+  const pickup = document.getElementById('pickup').value;
+  const jarak = parseInt(document.getElementById('jarak').value)||0;
+  let ongkir = 0;
+  if(pickup === 'antar' && jarak > 5){
+    ongkir = jarak * 2500;
+  }
+  document.getElementById('hargaPaket').innerText = rp(paket);
+  document.getElementById('ongkir').innerText = rp(ongkir);
+  document.getElementById('total').innerText = rp(paket + ongkir);
 }
 </script>
 
