Refactor index.html for improved layout and styles
Updated HTML structure and styles for better layout and readability.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Grill&Chill | Premium BBQ Package</title>
-
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
 <style>
 :root{
   --primary:#e63946;
@@ -14,107 +12,43 @@
   --card:#161616;
   --text:#eeeeee;
   --accent:#ffcc70;
+  --success:#25d366;
 }
 *{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:'Poppins',sans-serif;
-  background:var(--dark);
-  color:var(--text);
-}
+body{margin:0;font-family:'Poppins',sans-serif;background:var(--dark);color:var(--text);line-height:1.6}
 header{
-  min-height:70vh;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
-  padding:20px;
-  background:
-    linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)),
-    url('https://images.unsplash.com/photo-1558030006-450675393462');
-  background-size:cover;
+  min-height:60vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;padding:36px;
+  background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),url('https://images.unsplash.com/photo-1558030006-450675393462');
+  background-size:cover;background-position:center;
 }
-header h1{font-size:52px;margin:0}
-header p{font-size:20px;max-width:600px}
-.btn{
-  background:var(--primary);
-  color:#fff;
-  padding:14px 30px;
-  border-radius:12px;
-  text-decoration:none;
-  font-weight:600;
+header h1{font-size:48px;margin:0}
+header p{font-size:18px;margin:6px 0 18px;max-width:760px}
+.btn{display:inline-block;background:var(--primary);color:#fff;padding:12px 20px;border-radius:12px;text-decoration:none;font-weight:600;cursor:pointer}
+section{padding:60px 20px;max-width:1200px;margin:auto}
+h2{text-align:center;margin-bottom:24px}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px}
+.card{background:var(--card);padding:20px;border-radius:18px;box-shadow:0 10px 30px rgba(0,0,0,.5)}
+.badge{display:inline-block;background:var(--accent);color:#000;padding:6px 12px;border-radius:20px;font-weight:700;margin-bottom:8px}
+.gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px}
+.gallery img{width:100%;height:180px;object-fit:cover;border-radius:12px;display:block}
+label{display:block;margin-bottom:8px;font-weight:600}
+input[type="text"], input[type="tel"], input[type="date"], input[type="number"], select, textarea {
+  width:100%;padding:12px;border-radius:10px;border:none;margin-bottom:14px;background:#0b0b0b;color:var(--text)
 }
-section{
-  padding:70px 20px;
-  max-width:1200px;
-  margin:auto;
-}
-h2{
-  text-align:center;
-  margin-bottom:40px;
-}
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:30px;
-}
-.card{
-  background:var(--card);
-  padding:30px;
-  border-radius:22px;
-  box-shadow:0 12px 30px rgba(0,0,0,.6);
-}
-.badge{
-  display:inline-block;
-  background:var(--accent);
-  color:#000;
-  padding:6px 16px;
-  border-radius:20px;
-  font-size:12px;
-  font-weight:600;
-}
-.gallery{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:20px;
-}
-.gallery img{
-  width:100%;
-  height:220px;
-  object-fit:cover;
-  border-radius:18px;
-}
-label{display:block;margin-top:15px}
-select,input{
-  width:100%;
-  padding:14px;
-  border-radius:12px;
-  border:none;
-  margin-top:6px;
-}
-.breakdown{
-  background:#0b0b0b;
-  padding:16px;
-  border-radius:12px;
-  margin-top:15px;
-}
-.row{display:flex;justify-content:space-between}
-.total{
-  font-size:22px;
-  font-weight:700;
-  color:#25d366;
-}
-iframe{border:none;border-radius:16px}
-footer{
-  background:#000;
-  color:#aaa;
-  text-align:center;
-  padding:30px 20px;
-}
+textarea{min-height:100px;resize:vertical}
+.breakdown{background:#0b0b0b;padding:12px;border-radius:10px;margin-top:10px}
+.breakdown-row{display:flex;justify-content:space-between;margin-bottom:8px}
+.total{font-size:20px;font-weight:800;color:var(--success);margin-top:8px}
+.notice{font-size:13px;color:#bbb;margin-top:10px}
+.small{font-size:13px;color:#aaa}
+.inline-row{display:flex;gap:12px;flex-wrap:wrap}
+.action-btn{padding:12px 16px;border-radius:12px;border:none;font-weight:700;cursor:pointer}
+.wa-btn{background:var(--success);color:#000}
+.form-btn{background:var(--primary);color:#fff}
+.footer{background:#000;color:#aaa;text-align:center;padding:18px 12px;margin-top:40px}
+@media(max-width:600px){header h1{font-size:34px}}
 </style>
 </head>
-
 <body>
 
 <header>
@@ -124,128 +58,178 @@ footer{
 </header>
 
 <section>
-<h2>Kenapa Grill&Chill?</h2>
-<div class="grid">
-  <div class="card">🔥 Paket BBQ lengkap & siap pakai</div>
-  <div class="card">🥩 Daging fresh & kualitas premium</div>
-  <div class="card">🚚 Antar – jemput area Depok</div>
-  <div class="card">🎉 Cocok untuk keluarga & acara spesial</div>
-</div>
+  <h2>Kenapa Grill&Chill?</h2>
+  <div class="grid">
+    <div class="card">🔥 Paket BBQ lengkap & siap pakai</div>
+    <div class="card">🥩 Daging fresh & kualitas premium</div>
+    <div class="card">🚚 Antar – jemput area Depok</div>
+    <div class="card">🎉 Cocok untuk keluarga & acara spesial</div>
+  </div>
 </section>
 
 <section>
-<h2>Paket Grill</h2>
-<div class="grid">
-  <div class="card">
-    <span class="badge">Best Seller</span>
-    <h3>Paket Romantic</h3>
-    <ul>
-      <li>Grill Pan + Kompor + Gas</li>
-      <li>Beef 250gr & Chicken 250gr</li>
-      <li>Saus & sayuran</li>
-      <li>Porsi 1–2 orang</li>
-    </ul>
-    <strong>Rp 119.000</strong>
-  </div>
+  <h2>Paket Grill</h2>
+  <div class="grid">
+    <div class="card">
+      <span class="badge">Best Seller</span>
+      <h3>Paket Romantic</h3>
+      <ul>
+        <li>Grill Pan + Kompor + Gas</li>
+        <li>Beef 250gr</li>
+        <li>Chicken 250gr</li>
+        <li>Saus BBQ lengkap & sayuran</li>
+        <li>Porsi 1–2 orang</li>
+      </ul>
+      <p><strong>Rp 119.000</strong></p>
+    </div>
 
-  <div class="card">
-    <span class="badge">Favorit</span>
-    <h3>Paket Party</h3>
-    <ul>
-      <li>Grill Pan + Kompor + Gas</li>
-      <li>Beef 500gr & Chicken 500gr</li>
-      <li>Saus & sayuran</li>
-      <li>Porsi 4–5 orang</li>
-    </ul>
-    <strong>Rp 200.000</strong>
-  </div>
+    <div class="card">
+      <span class="badge">Favorit</span>
+      <h3>Paket Party</h3>
+      <ul>
+        <li>Grill Pan + Kompor + Gas</li>
+        <li>Beef 500gr</li>
+        <li>Chicken 500gr</li>
+        <li>Saus BBQ lengkap & sayuran</li>
+        <li>Porsi 4–5 orang</li>
+      </ul>
+      <p><strong>Rp 200.000</strong></p>
+    </div>
 
-  <div class="card">
-    <h3>Paket Custom</h3>
-    <p>Menu & porsi fleksibel sesuai kebutuhan acara.</p>
-    <strong>Harga menyesuaikan</strong>
+    <div class="card">
+      <h3>Paket Custom</h3>
+      <p>Menu & porsi fleksibel sesuai kebutuhan acara. Hubungi admin untuk penawaran.</p>
+      <p><strong>Harga menyesuaikan</strong></p>
+    </div>
   </div>
-</div>
 </section>
 
 <section>
-<h2>Galeri BBQ</h2>
-<div class="gallery">
-  <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1">
-  <img src="https://images.unsplash.com/photo-1529193591184-b1d58069ecdd">
-  <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092">
-  <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe">
-</div>
+  <h2>Galeri BBQ</h2>
+  <div class="gallery">
+    <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1" alt="BBQ 1">
+    <img src="https://images.unsplash.com/photo-1529193591184-b1d58069ecdd" alt="BBQ 2">
+    <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092" alt="BBQ 3">
+    <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe" alt="BBQ 4">
+  </div>
 </section>
 
 <section id="booking">
-<h2>Hitung Booking</h2>
+  <h2>Hitung & Siapkan Booking</h2>
 
-<div class="card">
+  <div class="card">
+    <label>Pilih Paket</label>
+    <select id="paketSelect" onchange="hitungHarga();">
+      <option value="0">-- Pilih Paket --</option>
+      <option value="119000">Paket Romantic – Rp119.000</option>
+      <option value="200000">Paket Party – Rp200.000</option>
+      <option value="0">Paket Custom – Harga Menyesuaikan</option>
+    </select>
 
-<label>Pilih Paket</label>
-<select id="paket" onchange="hitung()">
-  <option value="0">-- Pilih Paket --</option>
-  <option value="119000">Paket Romantic</option>
-  <option value="200000">Paket Party</option>
-</select>
+    <label>Metode Pengambilan</label>
+    <select id="pickupSelect" onchange="hitungHarga();">
+      <option value="ambil">Ambil Sendiri (Gratis)</option>
+      <option value="antar">Diantar</option>
+    </select>
 
-<label>Metode Pengambilan</label>
-<select id="pickup" onchange="hitung()">
-  <option value="ambil">Ambil Sendiri</option>
-  <option value="antar">Di Antar</option>
-</select>
+    <label>Jarak Pengantaran (km)</label>
+    <input id="jarakInput" type="number" min="0" placeholder="Isi jarak (contoh: 7)" oninput="hitungHarga()" />
 
-<label>Jarak (km)</label>
-<input type="number" id="jarak" oninput="hitung()">
+    <div class="breakdown" id="breakdownBox">
+      <div class="breakdown-row"><div>Harga Paket</div><div id="hargaPaketText">Rp 0</div></div>
+      <div class="breakdown-row"><div>Ongkir</div><div id="ongkirText">Rp 0</div></div>
+      <div class="breakdown-row total"><div>TOTAL</div><div id="totalText">Rp 0</div></div>
+    </div>
 
-<div class="breakdown">
-  <div class="row"><span>Harga Paket</span><span id="hargaPaket">Rp 0</span></div>
-  <div class="row"><span>Ongkir</span><span id="ongkir">Rp 0</span></div>
-  <div class="row total"><span>Total</span><span id="total">Rp 0</span></div>
-</div>
+    <div class="notice">
+      ✅ Gratis ongkir untuk jarak 1–5 km.<br>
+      ✅ Jika >5 km → ongkir = 2.500 × jarak (total km).<br>
+      <span class="small">(Catatan: sesuai permintaan — ongkir dihitung penuh bila >5km)</span>
+    </div>
 
-<a href="#form" class="btn" style="margin-top:20px">Lanjut Form Resmi</a>
-<p style="font-size:12px;color:#bbb;margin-top:10px">
-Upload KTP / KK WAJIB • Gratis 1–5 km • >5 km Rp 2.500 / km
-</p>
+    <div style="margin-top:18px;display:flex;gap:12px;flex-wrap:wrap">
+      <!-- tombol buka Google Form (tab baru) -->
+      <a id="openFormBtn" class="action-btn form-btn" style="text-decoration:none;border-radius:12px"
+         href="https://forms.gle/vc4hXHzuNKndgukSA" target="_blank">
+        📋 Lanjut Isi Form Booking (Upload KTP/KK)
+      </a>
 
-</div>
+      <!-- tombol kirim ringkasan WA -->
+      <button class="action-btn wa-btn" onclick="kirimRingkasanWA()" type="button">
+        💬 Kirim Ringkasan via WhatsApp
+      </button>
+    </div>
+
+    <p class="small" style="margin-top:12px">* Upload KTP/KK WAJIB di Google Form. Booking dianggap resmi setelah admin konfirmasi & DP.</p>
+  </div>
 </section>
 
-<section id="form">
-<h2>Form Booking Resmi</h2>
-
-<iframe
-  src="https://docs.google.com/forms/d/e/1FAIpQLSeCAOL8N1m9EBtw8q7mZ7Gii87DdAjbmoedlib88B1SGsssdg/viewform?usp=header"
-  width="100%"
-  height="900">
-</iframe>
-
-</section>
-
-<footer>
-<p>📍 Cimpaeun – Tapos Depok</p>
-<p>📞 WhatsApp 089601360782</p>
-<p>© 2025 Grill&Chill</p>
+<footer class="footer">
+  <p>📍 Cimpaeun – Tapos Depok • WhatsApp: 089601360782</p>
+  <p>© 2025 Grill&Chill • Premium BBQ Package</p>
 </footer>
 
 <script>
-function rp(x){
-  return 'Rp ' + (x||0).toLocaleString('id-ID');
+/* Utility */
+function toRupiah(val){
+  return 'Rp ' + (Number(val) || 0).toLocaleString('id-ID');
 }
-function hitung(){
-  const paket = parseInt(document.getElementById('paket').value)||0;
-  const pickup = document.getElementById('pickup').value;
-  const jarak = parseInt(document.getElementById('jarak').value)||0;
+
+/* Hitung harga dan ongkir */
+function hitungHarga(){
+  const paketVal = Number(document.getElementById('paketSelect').value) || 0;
+  const pickup = document.getElementById('pickupSelect').value;
+  const jarak = Number(document.getElementById('jarakInput').value) || 0;
   let ongkir = 0;
-  if(pickup === 'antar' && jarak > 5){
-    ongkir = jarak * 2500;
+
+  if(pickup === 'antar'){
+    if(jarak > 5){
+      ongkir = jarak * 2500; // sesuai permintaan: total km x 2.500 jika >5
+    } else {
+      ongkir = 0; // 0 for 0-5 km (1-5 free)
+    }
+  } else {
+    ongkir = 0;
   }
-  document.getElementById('hargaPaket').innerText = rp(paket);
-  document.getElementById('ongkir').innerText = rp(ongkir);
-  document.getElementById('total').innerText = rp(paket + ongkir);
+
+  const total = paketVal + ongkir;
+
+  document.getElementById('hargaPaketText').innerText = toRupiah(paketVal);
+  document.getElementById('ongkirText').innerText = toRupiah(ongkir);
+  document.getElementById('totalText').innerText = toRupiah(total);
+
+  // Simpan ringkasan untuk WA
+  window.latestBookingSummary = {
+    paketVal, pickup, jarak, ongkir, total,
+    paketLabel: document.getElementById('paketSelect').selectedOptions[0].text
+  };
 }
+
+/* Kirim ringkasan ke WA (buka chat) */
+function kirimRingkasanWA(){
+  hitungHarga(); // pastikan up-to-date
+  const s = window.latestBookingSummary || {};
+  const pesan =
+`Halo Grill&Chill 👋
+
+Saya mau booking:
+Nama: -
+WhatsApp: -
+Paket: ${s.paketLabel || '-'}
+Metode: ${s.pickup || '-'}
+Jarak: ${s.jarak ? s.jarak + ' km' : '-'}
+Harga Paket: ${toRupiah(s.paketVal || 0)}
+Ongkir: ${toRupiah(s.ongkir || 0)}
+TOTAL: ${toRupiah(s.total || 0)}
+
+Saya akan melengkapi Form Resmi dan upload KTP/KK sekarang. Terima kasih.`;
+
+  const waUrl = 'https://wa.me/6289601360782?text=' + encodeURIComponent(pesan);
+  window.open(waUrl, '_blank');
+}
+
+/* init */
+hitungHarga();
 </script>
 
 </body>
