--- a/index.html
+++ b/index.html
@@ -17,35 +17,29 @@
 *{box-sizing:border-box}
 body{margin:0;font-family:'Poppins',sans-serif;background:var(--dark);color:var(--text);line-height:1.6}
 header{
-  min-height:60vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;padding:36px;
+  min-height:64vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;padding:36px;
   background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),url('https://images.unsplash.com/photo-1558030006-450675393462');
   background-size:cover;background-position:center;
 }
 header h1{font-size:48px;margin:0}
-header p{font-size:18px;margin:6px 0 18px;max-width:760px}
+header p{font-size:18px;margin:10px 0 18px;max-width:760px}
 .btn{display:inline-block;background:var(--primary);color:#fff;padding:12px 20px;border-radius:12px;text-decoration:none;font-weight:600;cursor:pointer}
-section{padding:60px 20px;max-width:1200px;margin:auto}
-h2{text-align:center;margin-bottom:24px}
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px}
-.card{background:var(--card);padding:20px;border-radius:18px;box-shadow:0 10px 30px rgba(0,0,0,.5)}
-.badge{display:inline-block;background:var(--accent);color:#000;padding:6px 12px;border-radius:20px;font-weight:700;margin-bottom:8px}
+section{padding:48px 20px;max-width:1200px;margin:auto}
+h2{text-align:center;margin-bottom:18px}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:18px}
+.card{background:var(--card);padding:20px;border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,.5)}
 .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px}
-.gallery img{width:100%;height:180px;object-fit:cover;border-radius:12px;display:block}
-label{display:block;margin-bottom:8px;font-weight:600}
-input[type="text"], input[type="tel"], input[type="date"], input[type="number"], select, textarea {
-  width:100%;padding:12px;border-radius:10px;border:none;margin-bottom:14px;background:#0b0b0b;color:var(--text)
-}
-textarea{min-height:100px;resize:vertical}
-.breakdown{background:#0b0b0b;padding:12px;border-radius:10px;margin-top:10px}
+.gallery img{width:100%;height:160px;object-fit:cover;border-radius:10px}
+label{display:block;margin-top:12px;font-weight:600}
+input,select,textarea{width:100%;padding:12px;border-radius:10px;border:none;margin-top:6px;background:#0b0b0b;color:var(--text)}
+.breakdown{background:#0b0b0b;padding:14px;border-radius:10px;margin-top:12px}
 .breakdown-row{display:flex;justify-content:space-between;margin-bottom:8px}
-.total{font-size:20px;font-weight:800;color:var(--success);margin-top:8px}
-.notice{font-size:13px;color:#bbb;margin-top:10px}
-.small{font-size:13px;color:#aaa}
-.inline-row{display:flex;gap:12px;flex-wrap:wrap}
-.action-btn{padding:12px 16px;border-radius:12px;border:none;font-weight:700;cursor:pointer}
-.wa-btn{background:var(--success);color:#000}
-.form-btn{background:var(--primary);color:#fff}
-.footer{background:#000;color:#aaa;text-align:center;padding:18px 12px;margin-top:40px}
+.total{font-size:18px;font-weight:800;color:var(--success)}
+.small{font-size:13px;color:#bbb}
+.note{font-size:14px;color:#ccc;margin-top:12px;background:#0b0b0b;padding:12px;border-radius:10px}
+.actions{display:flex;gap:12px;flex-wrap:wrap;margin-top:12px}
+.status-badge{display:inline-block;padding:8px 12px;border-radius:999px;background:#333;color:#fff;font-weight:700}
+.footer{background:#000;color:#aaa;text-align:center;padding:18px;margin-top:30px}
 @media(max-width:600px){header h1{font-size:34px}}
 </style>
 </head>
@@ -71,35 +65,35 @@ textarea{min-height:100px;resize:vertical}
   <h2>Paket Grill</h2>
   <div class="grid">
     <div class="card">
-      <span class="badge">Best Seller</span>
+      <span style="display:inline-block;background:var(--accent);color:#000;padding:6px 12px;border-radius:999px;font-weight:700;margin-bottom:10px">Best Seller</span>
       <h3>Paket Romantic</h3>
       <ul>
         <li>Grill Pan + Kompor + Gas</li>
         <li>Beef 250gr</li>
         <li>Chicken 250gr</li>
-        <li>Saus BBQ lengkap & sayuran</li>
-        <li>Porsi 1–2 orang</li>
+        <li>Saus BBQ + Sayur</li>
+        <li>1–2 Orang</li>
       </ul>
-      <p><strong>Rp 119.000</strong></p>
+      <strong>Rp 119.000</strong>
     </div>
 
     <div class="card">
-      <span class="badge">Favorit</span>
+      <span style="display:inline-block;background:var(--accent);color:#000;padding:6px 12px;border-radius:999px;font-weight:700;margin-bottom:10px">Favorit</span>
       <h3>Paket Party</h3>
       <ul>
         <li>Grill Pan + Kompor + Gas</li>
         <li>Beef 500gr</li>
         <li>Chicken 500gr</li>
-        <li>Saus BBQ lengkap & sayuran</li>
-        <li>Porsi 4–5 orang</li>
+        <li>Saus BBQ + Sayur</li>
+        <li>4–5 Orang</li>
       </ul>
-      <p><strong>Rp 200.000</strong></p>
+      <strong>Rp 200.000</strong>
     </div>
 
     <div class="card">
       <h3>Paket Custom</h3>
-      <p>Menu & porsi fleksibel sesuai kebutuhan acara. Hubungi admin untuk penawaran.</p>
-      <p><strong>Harga menyesuaikan</strong></p>
+      <p>Menu & porsi fleksibel (hub admin).</p>
+      <strong>Harga menyesuaikan</strong>
     </div>
   </div>
 </section>
@@ -107,19 +101,20 @@ textarea{min-height:100px;resize:vertical}
 <section>
   <h2>Galeri BBQ</h2>
   <div class="gallery">
-    <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1" alt="BBQ 1">
-    <img src="https://images.unsplash.com/photo-1529193591184-b1d58069ecdd" alt="BBQ 2">
-    <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092" alt="BBQ 3">
-    <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe" alt="BBQ 4">
+    <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1" alt="bbq1">
+    <img src="https://images.unsplash.com/photo-1529193591184-b1d58069ecdd" alt="bbq2">
+    <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092" alt="bbq3">
+    <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe" alt="bbq4">
   </div>
 </section>
 
 <section id="booking">
-  <h2>Hitung & Siapkan Booking</h2>
+  <h2>Hitung Harga & Booking</h2>
 
-  <div class="card">
+  <div class="card" style="max-width:820px;margin:auto">
+
     <label>Pilih Paket</label>
-    <select id="paketSelect" onchange="hitungHarga();">
+    <select id="paketSelect" onchange="calcAll()">
       <option value="0">-- Pilih Paket --</option>
       <option value="119000">Paket Romantic – Rp119.000</option>
       <option value="200000">Paket Party – Rp200.000</option>
@@ -127,109 +122,167 @@ textarea{min-height:100px;resize:vertical}
     </select>
 
     <label>Metode Pengambilan</label>
-    <select id="pickupSelect" onchange="hitungHarga();">
-      <option value="ambil">Ambil Sendiri (Gratis)</option>
+    <select id="pickupSelect" onchange="calcAll()">
+      <option value="ambil">Ambil Sendiri</option>
       <option value="antar">Diantar</option>
     </select>
 
-    <label>Jarak Pengantaran (km)</label>
-    <input id="jarakInput" type="number" min="0" placeholder="Isi jarak (contoh: 7)" oninput="hitungHarga()" />
+    <label>Jarak Pengantaran (KM)</label>
+    <input id="jarakInput" type="number" min="0" placeholder="Contoh: 8" oninput="calcAll()">
 
     <div class="breakdown" id="breakdownBox">
       <div class="breakdown-row"><div>Harga Paket</div><div id="hargaPaketText">Rp 0</div></div>
       <div class="breakdown-row"><div>Ongkir</div><div id="ongkirText">Rp 0</div></div>
-      <div class="breakdown-row total"><div>TOTAL</div><div id="totalText">Rp 0</div></div>
+      <div class="breakdown-row"><div>Subtotal</div><div id="subtotalText">Rp 0</div></div>
+      <div class="breakdown-row"><div>DP (50%)</div><div id="dpText">Rp 0</div></div>
+      <div class="breakdown-row total"><div>Sisa Bayar</div><div id="sisaText">Rp 0</div></div>
     </div>
 
-    <div class="notice">
-      ✅ Gratis ongkir untuk jarak 1–5 km.<br>
-      ✅ Jika >5 km → ongkir = 2.500 × jarak (total km).<br>
-      <span class="small">(Catatan: sesuai permintaan — ongkir dihitung penuh bila >5km)</span>
+    <div style="margin-top:12px">
+      <span class="status-badge" id="statusBadge">Status: MENUNGGU DP</span>
     </div>
 
-    <div style="margin-top:18px;display:flex;gap:12px;flex-wrap:wrap">
-      <!-- tombol buka Google Form (tab baru) -->
-      <a id="openFormBtn" class="action-btn form-btn" style="text-decoration:none;border-radius:12px"
-         href="https://forms.gle/vc4hXHzuNKndgukSA" target="_blank">
-        📋 Lanjut Isi Form Booking (Upload KTP/KK)
-      </a>
-
-      <!-- tombol kirim ringkasan WA -->
-      <button class="action-btn wa-btn" onclick="kirimRingkasanWA()" type="button">
-        💬 Kirim Ringkasan via WhatsApp
-      </button>
+    <div class="note">
+      <strong>Penjelasan singkat:</strong>
+      <ol style="margin:8px 0 0 18px">
+        <li>Ongkir: 1–5 km = gratis. Jika > 5 km → ongkir = <em>jarak total × Rp 2.500</em>.</li>
+        <li>Subtotal = Harga Paket + Ongkir.</li>
+        <li>DP 50% = 50% × Subtotal (nominal untuk mengunci tanggal).</li>
+        <li>Sisa Bayar = Subtotal − DP.</li>
+      </ol>
+      <div class="small" style="margin-top:8px">Contoh: Paket Party Rp200.000, jarak 8 km → Ongkir 8×2.500=Rp20.000 → Subtotal Rp220.000 → DP Rp110.000 → Sisa Rp110.000.</div>
     </div>
 
-    <p class="small" style="margin-top:12px">* Upload KTP/KK WAJIB di Google Form. Booking dianggap resmi setelah admin konfirmasi & DP.</p>
+    <div class="actions">
+      <a id="openFormBtn" class="btn" target="_blank" rel="noopener">📋 Lanjut Isi Form Booking</a>
+      <a class="btn" style="background:var(--success);color:#000" id="waBtn">💬 Kirim Ringkasan via WA</a>
+    </div>
+
+    <p class="small" style="margin-top:12px">* Setelah klik Lanjut Isi Form: wajib upload KTP/KK & bukti transfer DP di Google Form. Tanpa bukti DP, booking akan berstatus MENUNGGU DP.</p>
+
   </div>
 </section>
 
 <footer class="footer">
   <p>📍 Cimpaeun – Tapos Depok • WhatsApp: 089601360782</p>
-  <p>© 2025 Grill&Chill • Premium BBQ Package</p>
+  <p>© 2025 Grill&Chill</p>
 </footer>
 
 <script>
-/* Utility */
-function toRupiah(val){
-  return 'Rp ' + (Number(val) || 0).toLocaleString('id-ID');
-}
+/* -----------------------------
+  CONFIG: ganti sesuai form mu
+  - FORM_BASE: link prefill base dari Google Form (sampai ?usp=pp_url)
+  - ENTRY_* : jika kamu punya entry IDs untuk total/dp/sisa, masukkan di sini.
+  Jika kosong, total/dp/sisa tidak akan diprefill.
+------------------------------ */
+/* Contoh prefill base kamu (dari sebelumnya) */
+const FORM_BASE = "https://docs.google.com/forms/d/e/1FAIpQLSeCAOL8N1m9EBtw8q7mZ7Gii87DdAjbmoedlib88B1SGsssdg/viewform?usp=pp_url";
 
-/* Hitung harga dan ongkir */
-function hitungHarga(){
-  const paketVal = Number(document.getElementById('paketSelect').value) || 0;
-  const pickup = document.getElementById('pickupSelect').value;
+/* Masukkan entry IDs jika kamu ingin prefill Total/DP/Sisa di Form.
+   Jika kamu belum membuat field untuk Total/DP/Sisa di Form, biarkan kosong.
+   Contoh: ENTRY_PAKET = 'entry.1123641359' (dari link prefill) */
+const ENTRY_PAKET   = "entry.1123641359"; // paket
+const ENTRY_METODE  = "entry.1420825954"; // metode
+const ENTRY_JARAK   = ""; // contoh 'entry.7777777777' jika ada
+const ENTRY_TOTAL   = ""; // contoh 'entry.8888888888' jika ada
+const ENTRY_DP      = ""; // contoh 'entry.9999999999' if exist
+const ENTRY_SISA    = ""; // example
+
+/* Nomor WhatsApp admin (international format without +) */
+const ADMIN_WA = "6289601360782";
+
+/* -----------------------------
+  Utility & calc functions
+------------------------------ */
+function toRupiah(n){ return 'Rp ' + (Number(n)||0).toLocaleString('id-ID'); }
+
+function calcAll(){
+  const paketSel = document.getElementById('paketSelect');
+  const paketVal = Number(paketSel.value) || 0;
+  const paketTxt = paketSel.options[paketSel.selectedIndex].text || '-';
+  const metode = document.getElementById('pickupSelect').value;
   const jarak = Number(document.getElementById('jarakInput').value) || 0;
-  let ongkir = 0;
 
-  if(pickup === 'antar'){
-    if(jarak > 5){
-      ongkir = jarak * 2500; // sesuai permintaan: total km x 2.500 jika >5
-    } else {
-      ongkir = 0; // 0 for 0-5 km (1-5 free)
-    }
-  } else {
-    ongkir = 0;
+  // Ongkir rule: 1-5 km free; >5 km => ongkir = jarak * 2500 (per permintaan)
+  let ongkir = 0;
+  if(metode === 'antar'){
+    if(jarak > 5) ongkir = Math.round(jarak * 2500);
   }
 
-  const total = paketVal + ongkir;
+  const subtotal = paketVal + ongkir;
+  const dp = Math.round(subtotal * 0.5);
+  const sisa = subtotal - dp;
 
+  // Update UI
   document.getElementById('hargaPaketText').innerText = toRupiah(paketVal);
   document.getElementById('ongkirText').innerText = toRupiah(ongkir);
-  document.getElementById('totalText').innerText = toRupiah(total);
+  document.getElementById('subtotalText').innerText = toRupiah(subtotal);
+  document.getElementById('dpText').innerText = toRupiah(dp);
+  document.getElementById('sisaText').innerText = toRupiah(sisa);
 
-  // Simpan ringkasan untuk WA
-  window.latestBookingSummary = {
-    paketVal, pickup, jarak, ongkir, total,
-    paketLabel: document.getElementById('paketSelect').selectedOptions[0].text
+  // Save for WA & prefill
+  window.booking = {
+    paketTxt, paketVal, metode, jarak, ongkir, subtotal, dp, sisa
+  };
+
+  updateFormLink();
+  updateWAButton();
+  updateStatusBadge();
+}
+
+function updateStatusBadge(){
+  const el = document.getElementById('statusBadge');
+  // informatif only (real status in Google Sheet)
+  el.innerText = 'Status: MENUNGGU DP';
+}
+
+/* Build prefill URL dynamically; add fields only if ENTRY_* is set */
+function updateFormLink(){
+  if(!FORM_BASE) return;
+  const b = window.booking || {};
+  let url = FORM_BASE;
+  const parts = [];
+  if(ENTRY_PAKET) parts.push(ENTRY_PAKET + '=' + encodeURIComponent(b.paketTxt || ''));
+  if(ENTRY_METODE) parts.push(ENTRY_METODE + '=' + encodeURIComponent(b.metode || ''));
+  if(ENTRY_JARAK) parts.push(ENTRY_JARAK + '=' + encodeURIComponent(b.jarak || ''));
+  if(ENTRY_TOTAL) parts.push(ENTRY_TOTAL + '=' + encodeURIComponent(b.subtotal || ''));
+  if(ENTRY_DP) parts.push(ENTRY_DP + '=' + encodeURIComponent(b.dp || ''));
+  if(ENTRY_SISA) parts.push(ENTRY_SISA + '=' + encodeURIComponent(b.sisa || ''));
+  if(parts.length) url += '&' + parts.join('&');
+  document.getElementById('openFormBtn').href = url;
+}
+
+/* WA message builder */
+function updateWAButton(){
+  const btn = document.getElementById('waBtn');
+  const b = window.booking || {};
+  const msg =
+`Halo Grill&Chill 👋
+Saya ingin booking:
+
+Paket: ${b.paketTxt || '-'}
+Metode: ${b.metode || '-'}
+Jarak: ${b.jarak ? b.jarak + ' km' : '-'}
+Harga Paket: ${toRupiah(b.paketVal || 0)}
+Ongkir: ${toRupiah(b.ongkir || 0)}
+SUBTOTAL: ${toRupiah(b.subtotal || 0)}
+DP (50%): ${toRupiah(b.dp || 0)}
+Sisa Bayar: ${toRupiah(b.sisa || 0)}
+
+Saya akan mengisi form resmi dan upload KTP/KK serta bukti DP.`;
+
+  btn.onclick = function(){
+    const waUrl = `https://wa.me/${ADMIN_WA}?text=` + encodeURIComponent(msg);
+    window.open(waUrl, '_blank');
   };
 }
 
-/* Kirim ringkasan ke WA (buka chat) */
-function kirimRingkasanWA(){
-  hitungHarga(); // pastikan up-to-date
-  const s = window.latestBookingSummary || {};
-  const pesan =
-`Halo Grill&Chill 👋
-
-Saya mau booking:
-Nama: -
-WhatsApp: -
-Paket: ${s.paketLabel || '-'}
-Metode: ${s.pickup || '-'}
-Jarak: ${s.jarak ? s.jarak + ' km' : '-'}
-Harga Paket: ${toRupiah(s.paketVal || 0)}
-Ongkir: ${toRupiah(s.ongkir || 0)}
-TOTAL: ${toRupiah(s.total || 0)}
-
-Saya akan melengkapi Form Resmi dan upload KTP/KK sekarang. Terima kasih.`;
-
-  const waUrl = 'https://wa.me/6289601360782?text=' + encodeURIComponent(pesan);
-  window.open(waUrl, '_blank');
-}
-
-/* init */
-hitungHarga();
+/* Init */
+document.addEventListener('DOMContentLoaded', function(){
+  // expose elements for calcAll
+  window.calcAll = calcAll;
+  calcAll();
+});
 </script>
 
 </body>
