Add motivational quote to header in index.html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ input,select,textarea{width:100%;padding:12px;border-radius:10px;border:none;mar
   <h1>Grill&Chill</h1>
   <p>Premium BBQ Package • Lengkap • Praktis • Siap Untuk Momen Spesial</p>
   <a class="btn" href="#booking">Booking Sekarang</a>
+  <p>"Tidak ada yang bisa mengerti kantongmu ditanggal tua untuk makan enak kecuali kami"</p>
 </header>
 
 <section>
